alignment corrected

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,3 +18,6 @@
 #read-btn:hover{
     background-color: black;
 }
+.test{
+    margin-left: 40px;
+}
